# sgtelib

./: .gitignore  CMakeLists.txt  readme.md
include/: Surrogate.hpp  Surrogate_Ensemble.hpp  Surrogate_Factory.hpp  Surrogate_Parameters.hpp  Surrogate_Utils.hpp
src/: Surrogate.cpp  Surrogate_Ensemble.cpp  Surrogate_Factory.cpp  Surrogate_Parameters.cpp  Surrogate_Utils.cpp  Tests.cpp  main.cpp
test_data/: X.txt  XX.txt  Z.txt
